[gd_scene load_steps=4 format=3 uid="uid://4lggbr25m2y8"]

[ext_resource type="Theme" uid="uid://ci8bbc06ttfy5" path="res://ui/fonts/OrbitronFont.tres" id="1_d4clo"]
[ext_resource type="Script" uid="uid://ca4wnomplccfj" path="res://start_screen.gd" id="1_s4vtk"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_d4clo"]
bg_color = Color(0.244776, 0.244776, 0.244776, 1)

[node name="Node2D" type="Control"]
layout_mode = 3
anchors_preset = 0
theme = ExtResource("1_d4clo")
script = ExtResource("1_s4vtk")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_right = 390.0
offset_bottom = 844.0
theme_override_styles/panel = SubResource("StyleBoxFlat_d4clo")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 106.0
offset_top = 311.0
offset_right = 279.0
offset_bottom = 412.0

[node name="StartButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Start Game"

[node name="SettingsButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Settings"

[node name="PermanentUpgradesButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Permanent Upgrades"

[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="VBoxContainer/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="VBoxContainer/PermanentUpgradesButton" to="." method="_on_permanent_upgrades_button_pressed"]
